# ifpr_provas_2023

./: CMakeLists.txt  README.md
.cache/clangd/index/: cpf.c.4FB7254623CE7D41.idx  cpf.h.78D79666E3B2D058.idx  main.c.BF47C76AC49F8D16.idx  main.c.C7415FC8FCDC17F7.idx  main.h.5D29F7165EE5D27C.idx  sort.c.0A2130C13E7DF643.idx  sort.h.BC89EFC24A2B3352.idx
ifpr_provas_2023/: CMakeLists.txt
ifpr_provas_2023/prova_1/: CMakeLists.txt
ifpr_provas_2023/prova_1/include/prova_1/: cpf.h  main.h  sort.h
ifpr_provas_2023/prova_1/source/: CMakeLists.txt  cpf.c  main.c  sort.c
